# head

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  processor.rs  size.rs
tests/: integration_tests.rs
