[package]
name = "head"
version = "0.1.0"
edition = "2021"
description = "A cross-platform implementation of GNU head with full feature parity"
license = "MIT"

[[bin]]
name = "head"
path = "src/main.rs"

[lib]
name = "head_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.19"
